updated privacy policy

--- a/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
+++ b/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
@@ -19,9 +19,13 @@
                     <h3>What data will be collected?</h3>
                     <span>No data is collected under any circumstances from playing the game. There is no means for the game to
                         collect data through play, it does not communicate with anything that requires transferral of data. It is an entirely offline experience.
-                        <br><br>The game does not contain any advertising material, and thus, there are no advertising companies attached to the game that collect
-                        analytical data.
+
                         <br><br>Contact information may be obtained and retained when you, the user, reach out to me at my support email.
+
+                        <br><br>This game uses Unity Ads for advertising, which may use and collect anonymous data about your interests to customize advertising.
+                        Interest and location data may be linked to your device, but not your identity. Please check the link below to see Unity's Privacy Policy and
+                        opt-out capabilities.
+                        <br>Unity Privacy Policy - <a href="https://unity.com/legal/privacy-policy">https://unity.com/legal/privacy-policy</a>
                     </span>
 
                     <h3>Why will this data be collected?</h3>
