--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -6,8 +6,8 @@
         <div class="main">
             <div class="container">
                 <h1>My Portfolio of Games</h1>
-                <h3 style="line-height: 0;">All of my games have been developed in the Unity engine.</h3>
-                <h3 style="line-height: 0;">Click any of the buttons below to be taken to the related game's page.</h3>
+                <h3>All of my games have been developed in the Unity engine.</h3>
+                <h3>Click any of the buttons below to be taken to the related game's page.</h3>
 
                 <br />
                 <div class = "gameContainer">
