--- a/src/app/games/buddy/buddy.component.html
+++ b/src/app/games/buddy/buddy.component.html
@@ -1,12 +1,12 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/buddy/buddy_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/buddy/buddy_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
                 <h1>Buddy</h1>
-                <h2 style="line-height:0px">Can you escape?</h2>
+                <h2>Can you escape?</h2>
 
                 <h3>
                     Buddy is a short point and click horror game in which you must escape from a room controlled by the eponymous Buddy.
@@ -47,22 +47,23 @@
                 </div>
 
                 <h2 style="line-height:36px">Enter, if you dare.</h2>
-                <p style="font-size:24px;line-height:0px">Buddy on itch.io: 
+                <p style="font-size:24px;">Buddy on itch.io: 
                     <a (click)="navigateToUrl('https://surr-sloidah.itch.io/buddy')">Link</a>
                 </p>
-                <p style="font-size:24px;line-height:0px">Buddy on indieDB: 
+                <p style="font-size:24px;">Buddy on indieDB: 
                     <a (click)="navigateToUrl('https://www.indiedb.com/games/buddy1')">Link</a>
                 </p>
                 <br />
 
                 <br />
 
-                <p style="line-height: 4px;">Buddy - Released January 2020</p>
-                <p style="line-height: 4px;">Genre - Point and Click, Horror</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
-                <p style="line-height: 4px;">
+                <p>Buddy - Released January 2020</p>
+                <p>Genre - Point and Click, Horror</p>
+                <p>Engine - Unity</p>
+                <p>
                     <a href="privacy/buddy">Android Privacy Policy</a>
                 </p>
+                <br /><br />
             </div>
         </div>
     </body>
