--- a/src/app/games/fumbling-wizard/fumbling-wizard.component.html
+++ b/src/app/games/fumbling-wizard/fumbling-wizard.component.html
@@ -1,12 +1,12 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/fumbling-wizard/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/fumbling-wizard/background_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
                 <h1>The Fumbling Wizard</h1>
-                <h2 style="line-height:0px">How long can you keep the meteor at bay?</h2>
+                <h2 style="">How long can you keep the meteor at bay?</h2>
 
                 <h3>
                     The Fumbling Wizard is a short game developed for Ludum Dare 50!
@@ -47,16 +47,17 @@
                     </div>
                 </div>
 
-                <p style="font-size:24px;line-height:0px">The Fumbling Wizard on itch.io: 
+                <p style="font-size:24px;">The Fumbling Wizard on itch.io: 
                     <a (click)="navigateToUrl('https://surr-sloidah.itch.io/the-fumbling-wizard')">Link</a>
                 </p>
                 <br />
 
                 <br />
 
-                <p style="line-height: 4px;">Cyberblaze - Released April 2022</p>
-                <p style="line-height: 4px;">Genre - First Person, Puzzle</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
+                <p>Cyberblaze - Released April 2022</p>
+                <p>Genre - First Person, Puzzle</p>
+                <p>Engine - Unity</p>
+                <br /><br />
             </div>
         </div>
     </body>
