--- a/src/app/games/security-room/security-room.component.html
+++ b/src/app/games/security-room/security-room.component.html
@@ -1,12 +1,12 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/security-room/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-20%);">
+            <img src="assets/security-room/background_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
-                <h1 style = "line-height:0px;">The Security Room</h1>
-                <h2 style="line-height:0px">The only thing between you and the next living thing is a series of cameras. Use them wisely.</h2>
+                <h1>The Security Room</h1>
+                <h2>The only thing between you and the next living thing is a series of cameras. Use them wisely.</h2>
 
                 <h3>
                     The Security Room is a first person horror game in which you find yourself locked in a mysterious room, 
@@ -45,9 +45,10 @@
 
                 <br />
 
-                <p style="line-height: 4px;">The Security Room - Currently in development</p>
-                <p style="line-height: 4px;">Genre - First Person, Fixed Camera, Horror</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
+                <p>The Security Room - Currently in development</p>
+                <p>Genre - First Person, Fixed Camera, Horror</p>
+                <p>Engine - Unity</p>
+                <br /><br />
             </div>
         </div>
     </body>
