--- a/src/app/games/seven-favours/seven-favours.component.html
+++ b/src/app/games/seven-favours/seven-favours.component.html
@@ -1,13 +1,13 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/sevenfavours_blurred2.png" class="width" style="opacity: 1; transform: translateY(-125px);">
+            <img src="assets/sevenfavours_blurred2.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
                 <h1>Seven Favors</h1>
-                <h2 style="line-height:0px">You have 7 days to prove your worth.</h2>
-                <h2 style="line-height:0px">Do you believe you are worthy?</h2>
+                <h2>You have 7 days to prove your worth.</h2>
+                <h2>Do you believe you are worthy?</h2>
 
                 <h3>
                     Seven Favours is a fast paced hack-n-slash game developed for Ludum Dare 52 by myself, 
@@ -53,28 +53,29 @@
                 </div>
 
                 <h2 style="line-height:36px">Do you have what it takes to earn your position amongst the gods?</h2>
-                <p style="font-size:24px;line-height:0px">Seven Favors on Ludum Dare: 
+                <p style="font-size:24px;">Seven Favors on Ludum Dare: 
                     <a (click)="navigateToUrl('https://ldjam.com/events/ludum-dare/52/seven-favors')">Link</a>
                 </p>
-                <p style="font-size:24px;line-height:0px">Seven Favors on itch.io: 
+                <p style="font-size:24px;">Seven Favors on itch.io: 
                     <a (click)="navigateToUrl('https://surr-sloidah.itch.io/seven-favours')">Link</a>
                 </p>
-                <p style="font-size:24px;line-height:0px">Seven Favors on indieDB: 
+                <p style="font-size:24px;">Seven Favors on indieDB: 
                     <a (click)="navigateToUrl('https://www.indiedb.com/games/seven-favors')">Link</a>
                 </p>
                 <br />
-                <h2 style="font-size:32px;line-height:0px">Nikita Vychuzhanin: 
+                <h2 style="font-size:32px;">Nikita Vychuzhanin: 
                     <a (click)="navigateToUrl('https://nikitavychuz.com/')">Link</a>
                 </h2>
-                <h2 style="font-size:32px;line-height:0px">WitchGirlfriend on itch.io: 
+                <h2 style="font-size:32px;">WitchGirlfriend on itch.io: 
                     <a (click)="navigateToUrl('https://witchgf.itch.io/')">Link</a>
                 </h2>
 
                 <br />
 
-                <p style="line-height: 4px;">Seven Favors - Released January 2023 as part of LD52</p>
-                <p style="line-height: 4px;">Genre - Hack and Slash</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
+                <p>Seven Favors - Released January 2023 as part of LD52</p>
+                <p>Genre - Hack and Slash</p>
+                <p>Engine - Unity</p>
+                <br /><br />
             </div>
         </div>
     </body>
