--- a/src/app/games/slaughter-lands/slaughter-lands.component.html
+++ b/src/app/games/slaughter-lands/slaughter-lands.component.html
@@ -1,12 +1,12 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/slaughter-lands/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/slaughter-lands/background_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
                 <h1>Slaughter Lands</h1>
-                <h2 style="line-height:0px">How long can you survive?</h2>
+                <h2>How long can you survive?</h2>
 
                 <h3>
                     Slaughter Lands is a Call Of Duty Zombies inspired game, in which the player must survive against hordes of the undead.
@@ -47,16 +47,17 @@
                     </div>
                 </div>
 
-                <p style="font-size:24px;line-height:0px">Slaughter Lands on itch.io: 
+                <p style="font-size:24px;">Slaughter Lands on itch.io: 
                     <a (click)="navigateToUrl('https://surr-sloidah.itch.io/slaughter-lands')">Link</a>
                 </p>
                 <br />
 
                 <br />
 
-                <p style="line-height: 4px;">Slaughter Lands - Released September 2016</p>
-                <p style="line-height: 4px;">Genre - First Person Shooter, Horror</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
+                <p>Slaughter Lands - Released September 2016</p>
+                <p>Genre - First Person Shooter, Horror</p>
+                <p>Engine - Unity</p>
+                <br /><br />
             </div>
         </div>
     </body>
