--- a/src/app/games/buddy/buddy.component.css
+++ b/src/app/games/buddy/buddy.component.css
@@ -45,4 +45,32 @@ html, body {
     color: red;
 }
 
+@media (orientation:portrait){
+    .background {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        transform: translateY(-40px);
+    }
+    
+    .background img {
+        position: relative;
+        height: 100vh;
+        width: auto;
+    }
+}
+
+@media (orientation:landscape){
+    .background {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        transform: translateY(-40px);
+    }
+    
+    .background img {
+        object-fit: cover;
+    }
+}
+
 
