--- a/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
+++ b/src/app/games/buddy_privacypolicy/buddy_privacypolicy.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/buddy/buddy_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/buddy/buddy_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
@@ -47,59 +47,11 @@
                     <br/>
                     <br/>
 
-                    <p style="line-height: 4px;">
+                    <p>
                         <a href="games/buddy">Return to Buddy Page</a>
                     </p>
+                    <br /><br />
                 </div>
-                
-
-                <!-- <div class="screenshot">
-                    <div class="screenshothalf">
-                        <span>
-                            You must use your wits and the tools available to you to escape from Buddy's room.
-                            <br />Or die trying.
-                        </span>
-                    </div>
-                    <div class="screenshothalf">
-                        <iframe src="https://www.youtube.com/embed/DnWv-3VoGD0"></iframe>
-                    </div>
-                </div>
-                <div class="screenshot">
-                    <div class="screenshothalf">
-                        <span>
-                            The game is all hand-drawn artwork, created by myself in Paint Tool SAI
-                        </span>
-                    </div>
-                    <div class="screenshothalf">
-                        <img src="assets/buddy/1.png">
-                    </div>
-                </div>
-                <div class="screenshot">
-                    <div class="screenshothalf">
-                        <span>
-                            There are many endings to obtain, each with unique outcomes.
-                            <br /> Some good. Some bad.
-                        </span>
-                    </div>
-                    <div class="screenshothalf">
-                        <img src="assets/buddy/2.png">
-                    </div>
-                </div>
-
-                <h2 style="line-height:36px">Enter, if you dare.</h2>
-                <p style="font-size:24px;line-height:0px">Buddy on itch.io: 
-                    <a (click)="navigateToUrl('https://surr-sloidah.itch.io/buddy')">Link</a>
-                </p>
-                <p style="font-size:24px;line-height:0px">Buddy on indieDB: 
-                    <a (click)="navigateToUrl('https://www.indiedb.com/games/buddy1')">Link</a>
-                </p>
-                <br />
-
-                <br />
-
-                <p style="line-height: 4px;">Buddy - Released January 2020</p>
-                <p style="line-height: 4px;">Genre - Point and Click, Horror</p>
-                <p style="line-height: 4px;">Engine - Unity</p> -->
             </div>
         </div>
     </body>
