--- a/src/app/games/cyberblaze/cyberblaze.component.html
+++ b/src/app/games/cyberblaze/cyberblaze.component.html
@@ -1,12 +1,12 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/cyberblaze/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/cyberblaze/background_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
                 <h1>Cyberblaze</h1>
-                <h2 style="line-height:0px">Defend the data stream!</h2>
+                <h2 style="">Defend the data stream!</h2>
 
                 <h3>
                     Cyberblaze is a wave defense shooter in which you are left to fend for yourself.
@@ -45,16 +45,16 @@
                     </div>
                 </div>
 
-                <p style="font-size:24px;line-height:0px">Cyberblaze on itch.io: 
+                <p style="font-size:24px;">Cyberblaze on itch.io: 
                     <a (click)="navigateToUrl('https://surr-sloidah.itch.io/cyberblaze')">Link</a>
                 </p>
                 <br />
 
                 <br />
 
-                <p style="line-height: 4px;">Cyberblaze - Released May 2020</p>
-                <p style="line-height: 4px;">Genre - Wave Defense</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
+                <p>Cyberblaze - Released May 2020</p>
+                <p>Genre - Wave Defense</p>
+                <p>Engine - Unity</p>
             </div>
         </div>
     </body>
