--- a/src/app/games/goobers/goobers.component.html
+++ b/src/app/games/goobers/goobers.component.html
@@ -1,14 +1,14 @@
 <html>
     <body>
         <div class = "background">
-            <img src="assets/goobers/background_blurred.png" class="width" style="opacity: 1; transform: translateY(-10%);">
+            <img src="assets/goobers/background_blurred.png" class="width" style="opacity: 1;">
         </div>
         <div class="main">
             <div class="container">
-                <h1>Goobers</h1>
-                <h2 style="line-height:0px">Stronger together!</h2>
+                <h1 style="color:#000000;">Goobers</h1>
+                <h2 style="color:#000000;">Stronger together!</h2>
 
-                <h3>
+                <h3 style="color:#000000;">
                     Goobers is a 2D puzzle platformer developed for the Brackeys 2021.1 Jam by myself and Esther Holt.
                     <br />Developed over the course of 7 days, with the theme being "Stronger Together".
                     <br />It ranked 229th overall, out of 1831 entries.
@@ -16,7 +16,7 @@
 
                 <div class="screenshot">
                     <div class="screenshothalf">
-                        <span>
+                        <span style="color:#000000;">
                             You must rescue your little Goober pals and escape!
                         </span>
                     </div>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="screenshot">
                     <div class="screenshothalf">
-                        <span>
+                        <span style="color:#000000;">
                             You must navigate a variety of levels, and use 3 unique goober types
                             <br />to your advantage and reach the exit. But you must plan ahead or else
                             <br />your newfound size will backfire on you.
@@ -38,7 +38,7 @@
                 </div>
                 <div class="screenshot">
                     <div class="screenshothalf">
-                        <span>
+                        <span style="color:#000000;">
                             Featuring a simple, cutesy pixelated style and some bouncy, slimey animation.
                         </span>
                     </div>
@@ -47,23 +47,24 @@
                     </div>
                 </div>
 
-                <p style="font-size:24px;line-height:0px">Goobers on itch.io: 
+                <p style="font-size:24px;color:#000000;">Goobers on itch.io: 
                     <a (click)="navigateToUrl('https://surr-sloidah.itch.io/goobers')">Link</a>
                 </p>
-                <p style="font-size:24px;line-height:0px">Goobers on indieDB: 
+                <p style="font-size:24px;color:#000000;">Goobers on indieDB: 
                     <a (click)="navigateToUrl('https://www.indiedb.com/games/goobers')">Link</a>
                 </p>
                 <br />
 
-                <h2 style="font-size:32px;line-height:0px">Esther Holt on YouTube: 
+                <h2 style="font-size:32px;color:#000000;">Esther Holt on YouTube: 
                     <a (click)="navigateToUrl('https://www.youtube.com/@estherholt8435')">Link</a>
                 </h2>
 
                 <br />
 
-                <p style="line-height: 4px;">Cyberblaze - Released May 2020</p>
-                <p style="line-height: 4px;">Genre - Wave Defense</p>
-                <p style="line-height: 4px;">Engine - Unity</p>
+                <p style="line-height: 4px;color:#000000;">Cyberblaze - Released May 2020</p>
+                <p style="line-height: 4px;color:#000000;">Genre - Wave Defense</p>
+                <p style="line-height: 4px;color:#000000;">Engine - Unity</p>
+                <br /><br />
             </div>
         </div>
     </body>
