--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ html, body { padding: 0; margin: 0;}
     display: flex;
 }
 
-.screenshothalf {
+/* .screenshothalf {
     width: 50%;
     height: 100%;
 }
@@ -76,7 +76,7 @@ html, body { padding: 0; margin: 0;}
     display: block;
     width: 32vw;
     height: 18vw;
-}
+} */
 
 @media screen and (max-width: 1000px) {
     .textchunk {
