add padding to games page, dropdown no longer visible on portrait screens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -387,6 +387,12 @@
     margin-bottom: auto;
   }
 
+  @media (orientation:portrait){
+    .dropdown-content {
+      visibility: hidden;
+    }
+  }
+
   /* Responsive Styles */
   @media screen and (max-width: 767px) {
     .card-container > *:not(.circle-link) ,
