--- a/src/app/games-page/games.component.css
+++ b/src/app/games-page/games.component.css
@@ -94,6 +94,7 @@ html, body {
         /* align-self: center; */
         
         /* background-color: rgba(0, 0, 0, 1); */
+        padding-bottom: 50px;
     }
     
     .gameContainer {
