static page adds link back to normal page

--- a/src/app/static-pages/buddy_privacypolicy.html
+++ b/src/app/static-pages/buddy_privacypolicy.html
@@ -46,6 +46,10 @@
 
                     <br/>
                     <br/>
+
+                    <p>
+                        This is a static HTML version of the privacy policy, for the regular one, <a href="../privacy/buddy">click here</a>
+                    </p>
                     <br /><br />
                 </div>
             </div>
