add deletion email to privacy policy

--- a/src/app/static-pages/buddy_privacypolicy.html
+++ b/src/app/static-pages/buddy_privacypolicy.html
@@ -34,6 +34,11 @@
                         <br>- For further contact regarding support or game issues
                     </span>
 
+                    <h3>How can I delete my advertising data?</h3>
+                    <span>
+                        You can request for your advertising data collected by Unity Ads to be deleted by getting in touch with Unity at <a href="mailto:DPO@unity3d.com">DPO@unity3d.com</a>
+                    </span>
+
                     <h3>Safeguarding</h3>
                     <span>Any information that is collected is generally not retained for any longer than is necessary. When data is retained, it will be kept confidential.
                         I will not share any of your data with third parties or sell your data. Data may be disclosed if required by law.
