add reference to game player and app user privacy policy

--- a/src/app/static-pages/buddy_privacypolicy.html
+++ b/src/app/static-pages/buddy_privacypolicy.html
@@ -26,6 +26,7 @@
                         Interest and location data may be linked to your device, but not your identity. Please check the link below to see Unity's Privacy Policy and
                         opt-out capabilities.
                         <br>Unity Privacy Policy - <a href="https://unity.com/legal/privacy-policy">https://unity.com/legal/privacy-policy</a>
+                        <br>Unity Game Player and App User Privacy Policy - <a href="https://unity.com/legal/game-player-and-app-user-privacy-policy">https://unity.com/legal/game-player-and-app-user-privacy-policy</a>
                     </span>
 
                     <h3>Why will this data be collected?</h3>
@@ -37,6 +38,7 @@
                     <h3>How can I delete my advertising data?</h3>
                     <span>
                         You can request for your advertising data collected by Unity Ads to be deleted by getting in touch with Unity at <a href="mailto:DPO@unity3d.com">DPO@unity3d.com</a>
+                        <br>Further information can be found in the Unity Game Player and App User Privacy Policy linked above. 
                     </span>
 
                     <h3>Safeguarding</h3>
