--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -30,6 +30,18 @@
                         <p>Databricks Lakehouse Fundamentals</p>
                         <a href="https://credentials.databricks.com/9db22a50-11bc-4148-ba12-29762ddf32a2" target="_blank">Link To Certification</a>
                     </div>
+                    <div class="cert">
+                        <p>AWS Databricks Platform Architect</p>
+                        <a href="https://credentials.databricks.com/4fe4f270-3f7e-44e3-9480-c49cfb0ad013" target="_blank">Link To Certification</a>
+                    </div>
+                    <div class="cert">
+                        <p>Azure Databricks Platform Architect</p>
+                        <a href="https://credentials.databricks.com/db41016f-7273-4343-8988-860fc0994bc4" target="_blank">Link To Certification</a>
+                    </div>
+                    <div class="cert">
+                        <p>Data & AI Governance With Unity Catalog</p>
+                        <a href="https://credentials.databricks.com/6e34bbd6-b4f8-4519-82bd-c7971e3aa5f1" target="_blank">Link To Certification</a>
+                    </div>
                     
                     <br>
                     <h3>Microsoft</h3>
