add buddy mobile to games page

--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -17,6 +17,12 @@
                 </div>
 
                 <div class = "gameContainer">
+                    <p>2025</p>
+                    <img src = "assets/buddy/button_text_mobile.png" (click)="goToLink('/games/buddy')">
+                    <div class="vertical-line"></div>
+                </div>
+
+                <div class = "gameContainer">
                     <p>2023</p>
                     <img src = "assets/seven-favours/button_text.png" (click)="goToLink('/games/seven-favours')">
                     <div class="vertical-line"></div>
