--- a/src/app/games/buddy/buddy.component.html
+++ b/src/app/games/buddy/buddy.component.html
@@ -53,6 +53,9 @@
                 <p style="font-size:24px;">Buddy on indieDB: 
                     <a (click)="navigateToUrl('https://www.indiedb.com/games/buddy1')">Link</a>
                 </p>
+                <p style="font-size:24px;">Buddy on Google Play: 
+                    <a (click)="navigateToUrl('https://play.google.com/store/apps/details?id=com.surrsloidah.Buddy')">Link</a>
+                </p>
                 <br />
 
                 <br />
