--- a/src/app/games-page/games.component.html
+++ b/src/app/games-page/games.component.html
@@ -11,15 +11,16 @@
 
                 <br />
                 <div class = "gameContainer">
-                    <p>In Development</p>
+                    <p>2025</p>
                     <img src = "assets/security-room/button_text.png" (click)="goToLink('/games/security-room')">
                     <div class="vertical-line"></div>
                 </div>
 
                 <div class = "gameContainer">
-                    <p>2025</p>
+                    <p></p>
                     <img src = "assets/buddy/button_text_mobile.png" (click)="goToLink('/games/buddy')">
                     <div class="vertical-line"></div>
+                    <div class="vertical-line-connector"></div>
                 </div>
 
                 <div class = "gameContainer">
