--- a/src/app/games/security-room/security-room.component.html
+++ b/src/app/games/security-room/security-room.component.html
@@ -21,31 +21,56 @@
                 <div class="screenshot">
                     <div class="screenshothalf">
                         <span>
-                            You must use anything you find in the room to your advantage.
-                            <br />You never know when it'll come in handy in this strange place.
+                            An atmosphere-driven, PSX inspired horror game.
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <iframe src="https://www.youtube.com/embed/mM4oLNKi8h8"></iframe>
+                        <iframe src="https://www.youtube.com/embed/Y8vhalTeo5g?si=prCYG5KGCQpHMdd3"></iframe>
                     </div>
                 </div>
                 <div class="screenshot">
                     <div class="screenshothalf">
                         <span>
-                            Placeholder screenshot, game's still in development after all :)
+                            Awakening with no prior memories or knowledge, and no way to get out. Your only hope lies in the room's last functioning computer screen, and whatever tools the security system may hold.
                         </span>
                     </div>
                     <div class="screenshothalf">
-                        <img src="assets/buddy/1.png">
+                        <img src="assets/security-room/1.png">
                     </div>
                 </div>
+
+                <div class="screenshot">
+                    <div class="screenshothalf">
+                        <span>
+                            Using a hybrid of the First Person and Camera/Surveillance styles of gameplay, your investigative skills, memory and time-management abilities will be tested.
+                        </span>
+                    </div>
+                    <div class="screenshothalf">
+                        <img src="assets/security-room/6.png">
+                    </div>
+                </div>
+
+                <div class="screenshot">
+                    <div class="screenshothalf">
+                        <span>
+                            But be warned, you're not alone... 
+                        </span>
+                    </div>
+                    <div class="screenshothalf">
+                        <img src="assets/security-room/5.png">
+                    </div>
+                </div>
+
+                <p style="font-size:24px;color:#FFFFFF;">The Security Room on itch.io: 
+                    <a (click)="navigateToUrl('https://surr-sloidah.itch.io/the-security-room')">Link</a>
+                </p>
 
                 <!-- <h2 style="line-height:36px">Enter, if you dare.</h2> -->
                 <br />
 
                 <br />
 
-                <p>The Security Room - Currently in development</p>
+                <p>The Security Room - Released December 2025</p>
                 <p>Genre - First Person, Fixed Camera, Horror</p>
                 <p>Engine - Unity</p>
                 <br /><br />
